--- a/css/css.css
+++ b/css/css.css
@@ -484,6 +484,12 @@ footer .main .mainBox .right h3 {
     margin-bottom: 20px;
 }
 
+footer .main .mainBox .right a{
+    font-family: PingFangSC-Thin;
+    font-size: 14px;
+    color: #FFFFFF;
+    line-height: 14px;
+}
 footer .main .mainBox .right span{
     font-family: PingFangSC-Thin;
     font-size: 14px;
