--- a/css/css_20180801.css
+++ b/css/css_20180801.css
@@ -880,6 +880,43 @@ footer .main .mainBox .right span a{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    text-align: left;
+}
+
+
+.person-team{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 70px;
+}
+
+.person-team-right{
+    border-radius: 50%;
+    width: 85px;
+    height: 85px;
+    margin-right: 30px;
+}
+
+.person-team-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: right;
+}
+.team-name{
+    font-family: PingFangSC-Semibold;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin-bottom: 8px;
+    text-align: right;
+}
+
+.team-job{
+    font-family: PingFangSC-Regular;
+    font-size: 12px;
+    color: #FFFFFF;
+    margin-bottom: 15px;
+    text-align: right;
 }
 
 .person-name{
@@ -903,6 +940,7 @@ footer .main .mainBox .right span a{
     font-size: 12px;
     color: #FFFFFF;
     margin-top: 15px;
+    text-align: left;
 }
 
 .img-box{
